// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification templates tests should create citizen email for citizen cancelled booking 1`] = `
Object {
  "html": "<p>You have cancelled the following booking.</p>
<p>Booking for: <strong>Career </strong>.</p>
<p>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b></p>",
  "subject": "BookingSG cancellation: Career",
}
`;

exports[`Notification templates tests should create citizen email for citizen created booking 1`] = `
Object {
  "html": "<p>Your booking request has been received.</p>
<p>Booking for: <strong>Career</strong>.</p>
<p>Below is a confirmation of your booking details.<br>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b><br><a href='http://www.local.booking.gov.sg:3000/public/my-bookings/?bookingToken=f4533bed-da08-473a-8641-7aef918fe0db'>Reschedule / Cancel Booking</a></p>
<p><br></p>",
  "subject": "BookingSG confirmation: Career",
}
`;

exports[`Notification templates tests should create citizen email for citizen updated booking 1`] = `
Object {
  "html": "<p>You have updated a booking.</p>
<p>Booking for: <strong>Career</strong> <strong></strong>.</p>
<p>Below is a confirmation of your updated booking details.<br>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b><br><a href='http://www.local.booking.gov.sg:3000/public/my-bookings/?bookingToken=f4533bed-da08-473a-8641-7aef918fe0db'>Reschedule / Cancel Booking</a></p>",
  "subject": "BookingSG update: Career",
}
`;

exports[`Notification templates tests should create citizen email for service provider cancelled booking 1`] = `
Object {
  "html": "<p>The following booking has been cancelled by the other party.<br></p>
<p>Booking for: <strong>Career</strong> <strong></strong>.</p>
<p>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b></p>",
  "subject": "BookingSG cancellation: Career",
}
`;

exports[`Notification templates tests should create citizen email for service provider created booking 1`] = `
Object {
  "html": "<p>A booking has been made.</p>
<p>Booking for: <strong>Career</strong> <strong></strong>.</p>
<p>Below is a confirmation of your booking details.<br>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b><br><a href='http://www.local.booking.gov.sg:3000/public/my-bookings/?bookingToken=f4533bed-da08-473a-8641-7aef918fe0db'>Reschedule / Cancel Booking</a></p>",
  "subject": "BookingSG confirmation: Career",
}
`;

exports[`Notification templates tests should create citizen email for service provider updated booking 1`] = `
Object {
  "html": "<p>There has been an update to your booking confirmation.</p>
<p>Booking for: <strong>Career</strong> <strong></strong>.</p>
<p>Below is a confirmation of your updated booking details.<br>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b><br><a href='http://www.local.booking.gov.sg:3000/public/my-bookings/?bookingToken=f4533bed-da08-473a-8641-7aef918fe0db'>Reschedule / Cancel Booking</a></p>",
  "subject": "BookingSG update: Career",
}
`;

exports[`Notification templates tests should create service provider email for citizen cancelled booking 1`] = `
Object {
  "html": "<p>The following booking has been cancelled by the other party.</p>
<p>Booking for: <strong>Career</strong> <strong></strong>.</p>
<p>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b></p>",
  "subject": "BookingSG cancellation: Career",
}
`;

exports[`Notification templates tests should create service provider email for citizen created booking 1`] = `
Object {
  "html": "<p>You have received a new booking request.</p>
<p>Booking for: <strong>Career</strong> <strong></strong>.</p>
<p>Below is a summary of the booking request details.<br>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b></p>",
  "subject": "BookingSG request: Career",
}
`;

exports[`Notification templates tests should create service provider email for citizen updated booking 1`] = `
Object {
  "html": "<p>There has been an update to the following booking by the other party.</p>
<p>Booking for: <strong>Career</strong> <strong></strong>.</p>
<p>Below is a confirmation of the updated booking details.<br>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b></p>",
  "subject": "BookingSG update: Career",
}
`;

exports[`Notification templates tests should create service provider email for service provider cancelled booking 1`] = `
Object {
  "html": "<p>You have cancelled the following booking.</p>
<p>Booking for: <strong>Career</strong> <strong></strong>.</p>
<p>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b></p>",
  "subject": "BookingSG cancellation: Career",
}
`;

exports[`Notification templates tests should create service provider email for service provider updated booking 1`] = `
Object {
  "html": "<p>You have updated a booking.</p>
<p>Booking for: <strong>Career</strong> <strong></strong>.</p>
<p>Below is a summary of your updated booking details.<br>Booking status: <strong>Pending Approval</strong><br>Date: <strong>14 April 2021</strong><br>Time: <strong>10:00am - 11:00am</strong><br>Video Conference Link: <a href='http://www.zoom.us/1234567'>http://www.zoom.us/1234567</a><br>Location: <b>Some street</b></p>",
  "subject": "BookingSG update: Career",
}
`;
